# ur3e-ik

./: .gitignore  README.md  check_differences.py  hello.py  pyproject.toml  setup.py  test_precision_urdf_pen.py  test_translation_pen.py
examples/: IKOn2DShape.py  demo2.py  demo3DObject.py  demoCube.md  demoCube.py  demoOptimalIKSol.py  demoPlayWithSim.py  temp.py  testOptimizationIKsols.py  test_ik.py
ur3e/: ur3e_ikfast.cpp
ur3e_gripper/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp  ikfast_wrapper.cpp  ur3e_gripper.dae  ur3e_gripper.urdf  ur3e_gripper.wrapper.xml  ur3e_gripper_ikfast.cpp  ur3e_gripper_ikfast.pyx  ur3e_gripper_ikfast61.cpp
ur3e_minipen/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp  ikfast_wrapper.cpp  ur3e_minipen.urdf  ur3e_minipen.wrapper.xml  ur3e_minipen_ikfast.cpp  ur3e_minipen_ikfast61.cpp  ur3e_pen.dae  ur3e_pen.urdf  ur3e_pen_ikfast.pyx
ur3e_pen/: ur3e_pen_ikfast.cpp  ur3e_pen_ikfast.pyx  ur3e_pen_ikfast61.cpp
ur3e_pen_150/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp  ur3e_pen.dae  ur3e_pen.urdf  ur3e_pen_ikfast.cpp  ur3e_pen_ikfast.pyx  ur3e_pen_ikfast61.cpp
ur3e_pen_165/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp  ur3e_pen.dae  ur3e_pen.urdf  ur3e_pen.wrapper.xml  ur3e_pen_ikfast.cpp  ur3e_pen_ikfast.pyx  ur3e_pen_ikfast61.cpp
ur3e_pen_203/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp  ur3e_pen.dae  ur3e_pen.urdf  ur3e_pen_ikfast.cpp  ur3e_pen_ikfast.pyx  ur3e_pen_ikfast61.cpp
ur3e_pen_21/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp  ur3e_pen.dae  ur3e_pen.urdf  ur3e_pen_ikfast.cpp  ur3e_pen_ikfast.pyx  ur3e_pen_ikfast61.cpp
(+23 files in other folders)
