[build-system]
requires = ["setuptools>=42", "wheel", "cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ikfast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "security",
]
dynamic = ["license"]

[tool.uv.sources]
security = { git = "https://github.com/6figuress/SecurityModule.git" }
